# dghack-2021

./: README.md
ecole/: README.md  dghack2021-ecole-repartition.json  plot.plt  solution.py
ecole/solution-rs/: Cargo.toml  wishes.json
ecole/solution-rs/src/: main.rs
mascarade/: Cargo.toml  flag.txt
mascarade/src/: ake_client.rs  ake_server.rs
pcap/: README.md
secure-ftp-over-udp/: client.py  utils.py
smtp/: README.md  asdf.py  debug.sh  reverseshell_generator.py
xml/: README.md  ftp-server.rb  payload1  payload2  payload3  payload4
yara/: README.md  asdf.py  finder.py  xor.yara
